2008-02-03  Ales Hakl  <ales at hakl dot net>

	* dfsch/util.h: utility functions in public API

2008-01-27  Ales Hakl  <ales at hakl dot net>

	* lib/extref.c: External references

2008-01-17  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_empty_list_type): empty-list type
	(dfsch_abstract_type): abstract-type type
	(list_type): list type (common superclass of pair and empty-list)

	* src/weak.c (dfsch_weak_reference_dereference): lock allocator
	when checking for live reference 

2008-01-16  Ales Hakl  <ales at hakl dot net>

	* src/generic.c (dfsch_define_generic): merged ensure-generic into
	define-generic and define-method.

2008-01-14  Ales Hakl  <ales at hakl dot net>

	* scm/lib.scm: removed define-macro macro

	* src/native.c (define_macro): define-macro as special form

	* src/dfsch.c (dfsch_destructure): recursive destructuring

	* src/compile.c: compiler (expands macros, eliminates variable
	references)

2008-01-07  Ales Hakl  <ales at hakl dot net>

	* Makefile.am: install lib.scm

	* src/dfsch.c (dfsch_eval_impl): Macros are not implicit begin

2007-12-30  Ales Hakl  <ales at hakl dot net>

	* src/native.c (dfsch__native_register): removed support for
	user-defined forms (macros are general enough)
	all primitives as static structs

	* dfsch/dfsch.h (DFSCH_DECLARE_PRIMITIVE): support for statically
	allocated primitives

2007-12-28  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_make_vector): vector as non-nested objects

2007-12-27  Ales Hakl  <ales at hakl dot net>

	* src/object.c (native_form_define_class): strip angle brackets
	from class names

	* src/hash.c (hash_change_size): thread-safe resizing (hopefully)

2007-12-26  Ales Hakl  <ales at hakl dot net>

	* src/generic.c: generic functions (and completly new object system)

	* src/native.c (native_form_define_variable): define-variable
	special form

	* src/parse.c (tokenizer_process): unicode character literals

2007-12-25  Ales Hakl  <ales at hakl dot net>
