@@ -1605,9 +1605,9 @@ char* dfsch_obj_write(dfsch_object_t* obj, int max_depth, int readable){
   if (!obj->type){
     str_list_t *sl = sl_create();
     char buf[sizeof(void*)*2+1];
-    sl_append(sl, "#<typeless-value ");
+    sl_append(sl, "#<() ");
     sl_append(sl, " 0x");
-    snprintf(buf, sizeof(void*)*2+1, "%x", obj);
+    sl_append(sl, saprintf("%p", obj));
     sl_append(sl, buf);
     sl_append(sl, ">");
     return sl_value(sl);
@@ -1619,8 +1619,7 @@ char* dfsch_obj_write(dfsch_object_t* obj, int max_depth, int readable){
     sl_append(sl, "#<");
     sl_append(sl, obj->type->name);
     sl_append(sl, " 0x");
-    snprintf(buf, sizeof(void*)*2+1, "%x", obj);
-    sl_append(sl, buf);
+    sl_append(sl, saprintf("%p", obj));
     sl_append(sl, ">");
     return sl_value(sl);
   }
